removing experimental options for the container and using a hard upper bound of 2g instead